# LeviathanData

./: .env.example  .gitignore  DEPLOY_STATUS.md  LICENSE  README.md  ecosystem.config.cjs  jest.config.cjs  package-lock.json  package.json  playwright.config.js  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
backend/node/: app.js  auth.js  config.js  db.js  llmClient.js  orchestrator.js  pythonBridge.js  ws.js
backend/python/: app.py  background.py  config.py  crawler.py  db.py  llm_client.py  orchestrator.py  schemas.py  (+2 more)
data/: leviathan.db-shm  leviathan.db-wal  test-1770229726857.db
deploy/: caddyfile  docker-compose.yml
frontend/: index.html  script.js  style.css
tests/: aggressive_fix_loop.py  auto_refinement_loop.py  full_system_test.py  run_pipeline_test.py  test_llm_calls.py
tools/: browser_playwright.py  browser_puppeteer.py  db_chroma.py  db_lancedb.py  db_neo4j.py  db_qdrant.py  db_sqlite.py  db_weaviate.py  infra_caddy.py  infra_docker.py  infra_kubernetes.py  infra_prometheus_grafana.py  infra_traefik.py  ml_flaml.py  ml_lightgbm.py  ml_numpy.py  ml_pandas.py  ml_pytorch.py  ml_sklearn.py  ml_tensorflow.py  ml_transformers.py  ml_xgboost.py  mm_ffmpeg.py  mm_openclip.py  mm_tesseract.py  mm_whisper.py  orchestration_airflow.py  orchestration_autogen.py  orchestration_crewai.py  orchestration_dbt.py  orchestration_langgraph.py  orchestration_mage.py  orchestration_nifi.py  orchestration_openclaw.py  orchestration_prefect.py  orchestration_semantickernel.py  osint_financial.py  report_generator.py  viz_evidence.py  viz_metabase.py  (+3 more)
(+21 files in other folders)
